@@ -578,3 +578,9 @@
 	* Events: repeat events should not be affected by children.
 	Fixed to object passes events to the next object in the same layer
 	if the repeat_events is enabled.
+
+2011-12-23  Carsten Haitzler (The Rasterman)
+
+        * Fix bug in ico loader that causes crashes (eina_file_close
+          bug and mis-read of uchar into int).
+
